--- a/ASP .NET Project/Views/Products/Index.cshtml
+++ b/ASP .NET Project/Views/Products/Index.cshtml
@@ -158,7 +158,7 @@
                                         </a>
                                     </p>
                                     <div class="d-sm-flex">
-                                        <button class="btn-primary btn btn-sm mx-auto"
+                                        <button class="btn-primary btn btn-sm mx-auto add-to-cart"
                                                 @{ if (item.InStoke <= 0) { @: disabled="disabled"
                                                 } }>
                                             @{
