--- a/ASP .NET Project/Views/Products/Details.cshtml
+++ b/ASP .NET Project/Views/Products/Details.cshtml
@@ -66,7 +66,7 @@
             <a class="btn btn-light btn-sm mt-2 mt-sm-0" href="@Url.Action("Index")">
                 Back
             </a>*@
-                    <button class="btn-primary btn btn-sm mx-auto"
+                    <button class="btn-primary btn btn-sm mx-auto add-to-cart"
                             @{
                                 if (Model.InStoke <= 0)
                                 {
